# se-agent

./: .cursorrules  .env.example  .gitignore  Dockerfile  MEMORY_BANK.md  docker-compose.yml  pyproject.toml
.agents/: skills
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.cursor/hooks/state/: continual-learning.json
.cursor/plans/: milestone_3_chromadb_kb_ae247dbf.plan.md  milestone_4_follow-up_subgraph_513b889e.plan.md  milestone_5_poc_subgraph_tavily.plan.md
prompts/: iceberg_patterns.md  tower_product_knowledge.md
src/: config.py  main.py
src/db/: app_db.py
src/graph/: router.py  state.py
src/graph/discovery/: __init__.py  analyze_stack.py  gather_context.py  generate_discovery_summary.py  identify_use_cases.py  score_qualification.py
src/graph/followup/: __init__.py  draft_followup_email.py  extract_action_items.py  extract_product_feedback.py  summarize_meeting.py  update_health_score.py
src/graph/poc/: __init__.py  competitive_positioning.py  create_demo_script.py  (+2 more)
src/integrations/: gdrive.py  gmail.py  tavily_search.py
src/kb/: indexer.py  store.py
src/llm/: models.py
src/ui/: routes.py
tests/: conftest.py  test_db.py  test_fixtures.py  test_prompts.py
tests/test_graph/: test_discovery.py  test_followup.py  test_poc.py  test_proposal.py  test_router.py  test_state.py  test_subgraphs.py
tests/test_integrations/: test_gdrive.py  test_tavily.py
tests/test_kb/: test_indexer.py  test_integration.py  test_store.py
(+25 files in other folders)
