[project]
name = "tower-fde-agent"
version = "0.1.0"
description = "Tower FDE Workflow Agent — automates admin work across customer engagements"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=3.0",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "chromadb>=1.5",
    "sentence-transformers>=3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "google-api-python-client>=2.160",
    "google-auth-oauthlib>=1.2",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "tavily-python>=0.5",
    "sse-starlette>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
